# ThiefVK

./: CMakeLists.txt
Src/: ThiefVKBufferManager.cpp  ThiefVKBufferManager.hpp  ThiefVKCamera.cpp  ThiefVKCamera.hpp  ThiefVKDescriptorManager.cpp  ThiefVKDescriptorManager.hpp  ThiefVKDevice.cpp  ThiefVKDevice.hpp  ThiefVKEngine.cpp  ThiefVKEngine.hpp  ThiefVKInstance.cpp  ThiefVKInstance.hpp  ThiefVKMemoryManager.cpp  ThiefVKMemoryManager.hpp  ThiefVKModel.cpp  ThiefVKModel.hpp  ThiefVKPipeLineManager.cpp  ThiefVKPipeLineManager.hpp  ThiefVKSwapChain.cpp  ThiefVKSwapChain.hpp  ThiefVKUniformBufferManager.cpp  ThiefVKUniformBufferManager.hpp  ThiefVKVertex.cpp  ThiefVKVertex.hpp
Src/Shaders/: Albedo.frag  Albedo.vert  BasicFragment.spv  BasicTransVert.spv  BasicTransform.vert  CMakeLists.txt  Colour.frag  Composite.frag  Composite.vert  CompositeFragment.spv  CompositeVertex.spv  Depth.frag  Depth.vert  DepthFragment.spv  DepthVertex.spv  Light.frag  LightFragment.spv  Normal.frag  Normal.vert  NormalDebug.frag  NormalDebug.geom  NormalDebug.vert  NormalFragment.spv  NormalVertex.spv
